# formal-arithmetic-proof-checker

./: CMakeLists.txt  axioms.cpp  axioms.h  debug_output.h  expression.cpp  expression.h  hashing.cpp  hashing.h  main.cpp  parser.cpp  parser.h
